# EvalGrid

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  START_HERE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  tests.yml
adapters/gitlab/: base.py
adapters/jira/: base.py
adapters/llm/: anthropic_adapter.py  base.py  mock_target_adapter.py  ollama_adapter.py  openai_adapter.py
agent/: __init__.py  agent.py  memory.py  planner.py  report.py  target.py
core/: metric_registry.py  orchestrator.py  schemas.py  scoring.py
datasets/adversarial/: sample.json
datasets/golden/: sample.json
datasets/synthetic/: sample.json
docs/: architecture.html  architecture.md  architecture_visual.md  custom_metrics_guide.md  metrics_catalogue.md  roadmap.md  usage.md
eval_grid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
evalgrid/: __init__.py  cache.py  cost.py  evaluate.py  quickstart.py
evalgrid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
evalgrid/benchmarks/: __init__.py  deepeval_comparison.py
evals/: agent_evals.py  bias_fairness_evals.py  custom_metrics.py  deterministic.py  embedded_ai_evals.py  json_schema.py  llm_judge.py  multiagent_evals.py  performance_evals.py  rag_evals.py  reference_judge.py  robustness_evals.py  safety.py  semantic.py  summarization_evals.py
examples/: autonomous_eval.py
governance/: README.md  __init__.py  audit.py  change_management.py  data_integrity.py  judge_quality.py  metric_spec.py  operational.py  pipeline.py  red_flags.py  reporting.py  robustness.py  scope_control.py  scoring_rules.py
guards/: hallucination.py  pii.py  policy.py  prompt_injection.py  toxicity.py
pipelines/: batch_runner.py  ci.py  streaming_runner.py
prompt_lab/: __init__.py  evaluator.py  library.py  report.py  runner.py  wizard.py
prompts/automation_testing/: auto-001-test-script-review.yaml  auto-002-test-case-generator.yaml
prompts/performance_testing/: perf-001-test-plan.yaml
prompts/requirements_analysis/: req-001-bdd-scenarios.yaml  req-002-requirements-review.yaml
prompts/test_governance/: gov-001-defect-report.yaml  gov-002-test-summary-report.yaml
reports/: agent_html_report.py  html_report.py  json_report.py  markdown_report.py  scorecard.py
scripts/: cli.py
synthetic/: augmentation.py  dataset_builder.py  redteam.py
tests/: conftest.py  test_agent.py  test_async_evaluate.py  test_batch_judging.py  test_comprehensive.py  test_evalgrid_api.py  test_governance.py  test_judge_integration.py  test_new_metrics.py  test_performance_metrics.py  test_security.py  test_smoke.py
